Closed Bug 94371 Opened 23 years ago Closed 23 years ago

nsIPluginStreamListener::GetStreamType is not called anymore

Categories

(Core Graveyard :: Plug-ins, defect, P3)

defect

Tracking

(Not tracked)

VERIFIED FIXED
mozilla0.9.4

People

(Reporter: sean, Assigned: peterlubczynski-bugs)

Details

Attachments

(1 file)

One of the patches for bug 85334 removed this line in error:
   mPStreamListener->GetStreamType(&mStreamType);

see nsPluginHostImpl.cpp rev 1.271:

http://bonsai.mozilla.org/cvsview2.cgi?
diff_mode=context&whitespace_mode=show&file=nsPluginHostImpl.cpp&root=/cvsroot&s
ubdir=mozilla/modules/plugin/base/src&command=DIFF_FRAMESET&rev1=1.270&rev2=1.27
1

It should either be restored, or the plugin documentation 
(http://www.mozilla.org/docs/plugin.html) should be updated to reflect that all 
streams are treated as nsPluginStreamType_Normal and that 
nsIPluginStreamListener::GetStreamType is no longer called.
Peter, did you fix that bug?
Yikes, that needs to go back. But what does the SetUpCache(aURL);              
                                        do?
Assignee: av → peterlubczynski
Priority: -- → P3
Hardware: PC → All
Target Milestone: --- → mozilla0.9.4
Hm... Looks like it is not used.
Sean, how serious is this? Should this be a branch cadidate?

Andrei, can you review?

If the code from SetUpCache(aURL) is no longer needed, another bug should be
opened on removing it.
Status: NEW → ASSIGNED
Keywords: patch
Whiteboard: [seeking reviews]
Looks good to me, r=av
Speaking for Beatnik, this isn't serious.  Could be a problem for a plugin if 
it wants nsPluginStreamType_AsFileOnly and doesn't do the right thing in 
OnDataAvailable (which wouldn't normally get called if 
nsPluginStreamType_AsFileOnly was expected).
SR=WATERSON!!!!!!
Keywords: review
Whiteboard: [seeking reviews]
Patch in the trunk, marking FIXED.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
verif patch in trnk.
Status: RESOLVED → VERIFIED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: