Fix for mStreamType not being set correctly bug 94371 r=av sr=waterson